--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "James O'Meara 13715519",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.5.8",
+    "ejs": "^2.5.2",
     "express": "^4.14.0"
   }
 }
