--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
   "dependencies": {
     "angular": "^1.5.8",
     "ejs": "^2.5.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0"
+  },
+  "devDependencies": {
+    "grunt-browserify": "^5.0.0",
+    "karma": "^1.3.0"
   }
 }
