--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
+    "bower": "^1.8.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "grunt": "^1.0.1",
