--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "grunt-browserify": "^5.0.0",
     "grunt-jasmine-nodejs": "^1.5.4",
     "grunt-karma": "^2.0.0",
+    "grunt-protractor-runner": "^4.0.0",
+    "grunt-protractor-webdriver": "^0.2.5",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
