--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "James O'Meara 13715519",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.5.8",
     "bower": "^1.8.0",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
@@ -20,6 +19,7 @@
     "mongodb": "^2.2.20"
   },
   "devDependencies": {
+    "grunt-angular-templates": "^1.1.0",
     "grunt-browserify": "^5.0.0",
     "grunt-jasmine-nodejs": "^1.5.4",
     "grunt-karma": "^2.0.0",
