--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2"
+    "karma-jasmine": "^1.0.2",
+    "karma-story-reporter": "^0.3.1"
   }
 }
