--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "grunt-karma": "^2.0.0",
     "grunt-protractor-runner": "^4.0.0",
     "grunt-protractor-webdriver": "^0.2.5",
+    "grunt-shell-spawn": "^0.3.10",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
