--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-story-reporter": "^0.3.1"
+    "karma-story-reporter": "^0.3.1",
+    "protractor-jasmine2-screenshot-reporter": "^0.3.4"
   }
 }
